<resources>
    <string name="app_name">Открыть адрес на GoogleMap</string>
    <string name="textButton">Ищем</string>
    <string name="textCheckbox">Поиск по названию места</string>
    <string name="textPlace">Введите адрес:</string>
    <string name="textLatitude">Введите широту:</string>
    <string name="textLongitude">Введите долготу:</string>
    <string name="textEditPlace">Санкт-Петербург</string>
    <string name="textEditLatitude">59.939400</string>
    <string name="textEditLongitude">30.315707</string>
    <string name="textSearchCoordinates">geo:%s,%s</string>
    <string name="textSearchPlace">geo:?q=%s</string>
</resources>
